attempt 1 at fixing mobile overflow
problem with text shifting upwards on landing page after nav menu is active

--- a/css/custom.css
+++ b/css/custom.css
@@ -271,3 +271,7 @@
   display: block;
   overflow: hidden;
 }
+
+.container {
+  display: block;
+}
