--- a/css/membership.css
+++ b/css/membership.css
@@ -2,7 +2,7 @@ body {
     text-align: center;
 }
 
-.joinFam {
+.container {
     padding: 50px;
 }
 .description {
